third_party/move/move-compiler-v2/tests/checking/positional_fields/struct_postfix_ability_decl.move
module 0x42::test {
    struct S {} has copy;

    struct T<T> { x: T, y: S } has drop;
}
